# pyTemplate

./: README.md
pytemplate/: cookiecutter.json
pytemplate/{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
pytemplate/{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
pytemplate/{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  main.py
pytemplate/{{cookiecutter.project_slug}}/tests/: test_version.py
